--- a/packages/chat-ui/.env.production
+++ b/packages/chat-ui/.env.production
@@ -1,5 +1,5 @@
-NEXT_PUBLIC_SOLANA_URL=https://testauth.genesysgo.net
-NEXT_PUBLIC_SITE_URL=https://app.strataprotocol.com
+NEXT_PUBLIC_SOLANA_URL=https://solana--mainnet.datahub.figment.io/apikey/24c64e276fc5db6ff73da2f59bac40f2
+NEXT_PUBLIC_SITE_URL=https://chat.autist.design
 NEXT_PUBLIC_WUMBO_IDENTITY_SERVICE_URL=https://prod-identity.teamwumbo.com
 NEXT_PUBLIC_GOOGLE_ANALYTICS=G-L4QLBX3394
 NEXT_PUBLIC_ISSUER=https://auth.genesysgo.net/auth/realms/RPCs/protocol/openid-connect
