--- a/packages/chat/package.json
+++ b/packages/chat/package.json
@@ -31,6 +31,7 @@
     "@project-serum/anchor": "^0.22.0",
     "@shadow-drive/sdk": "^2.0.3",
     "@solana/web3.js": "^1.43.4",
+    "@strata-foundation/spl-token-bonding": "^3.7.0",
     "@strata-foundation/spl-utils": "^3.6.1",
     "@types/uuid": "^8.3.4",
     "add": "^2.0.6",
