--- a/packages/chat-ui/package.json
+++ b/packages/chat-ui/package.json
@@ -34,8 +34,8 @@
     "@orca-so/sdk": "^1.2.24",
     "@shadow-drive/sdk": "^2.0.3",
     "@solana/buffer-layout": "^4.0.0",
-    "@solana/wallet-adapter-base": "^0.9.5",
-    "@solana/wallet-adapter-react": "^0.15.5",
+    "@solana/wallet-adapter-base": "0.9.4",
+    "@solana/wallet-adapter-react": "0.15.4",
     "@solana/wallet-adapter-react-ui": "^0.9.5",
     "@solana/wallet-adapter-wallets": "^0.16.1",
     "@solana/web3.js": "^1.43.4",
