--- a/packages/chat-ui/package.json
+++ b/packages/chat-ui/package.json
@@ -43,6 +43,7 @@
     "@types/request-promise": "^4.1.48",
     "add": "^2.0.6",
     "axios": "^0.26.1",
+    "gh-pages": "^4.0.0",
     "js-base64": "^3.7.2",
     "moment": "^2.29.1",
     "next": "12.0.7",
