--- a/packages/chat-ui/package.json
+++ b/packages/chat-ui/package.json
@@ -17,7 +17,7 @@
     "dev": "NODE_OPTIONS='--inspect' next dev",
     "watch": "tsc --watch --project tsconfig-build.json",
     "build-lib": "tsc --project tsconfig-build.json",
-    "build": "echo blah",
+    "build": "yarn next build && yarn next export",
     "start": "yarn serve -d out",
     "lint": "next lint",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
